--- a/style.css
+++ b/style.css
@@ -2,14 +2,14 @@ body {
     font-family: Arial, sans-serif;
     line-height: 1.6;
     background-color: #f4f4f4;
-    color: #333;
+    color: #dbcfcf;
     max-width: 800px;
     margin: auto;
     padding: 20px;
 }
 
 header {
-    background-color: #333;
+    background-color: #807373;
     color: #fff;
     padding: 10px 0;
     text-align: center;
