Add homepage files

--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 body {
     font-family: Arial, sans-serif;
     line-height: 1.6;
-    background-color: #f4f4f4;
-    color: #dbcfcf;
+    background-color: #e7dada;
+    color: #74484865;
     max-width: 800px;
     margin: auto;
     padding: 20px;
