--- a/style.css
+++ b/style.css
@@ -2,15 +2,15 @@ body {
     font-family: Arial, sans-serif;
     line-height: 1.6;
     background-color: #f4f4f4;
-    color: #74484865;
+    color: #333;
     max-width: 800px;
     margin: auto;
     padding: 20px;
 }
 
 header {
-    background-color: #807373;
-    color: #fff;
+    background-color: #577c7a;
+    color: #85965f;
     padding: 10px 0;
     text-align: center;
 }
@@ -25,7 +25,7 @@ nav ul {
 
 nav ul li a {
     text-decoration: none;
-    color: #ece8e8;
+    color: #333;
     padding: 5px 10px;
     border-radius: 5px;
     transition: background-color 0.3s;
