--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body {
 }
 
 header {
-    background-color: #577c7a;
+    background-color: #333;
     color: #85965f;
     padding: 10px 0;
     text-align: center;
