--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body {
 
 header {
     background-color: #333;
-    color: #85965f;
+    color: #4e661b;
     padding: 10px 0;
     text-align: center;
 }
