Add homepage files

--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body {
 }
 
 header {
-    background-color: #333;
+    background-color: #26a5658c;
     color: #4e661b;
     padding: 10px 0;
     text-align: center;
