Add homepage files

--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body {
 
 header {
     background-color: #26a5658c;
-    color: #4e661b;
+    color: #0f9916e0;
     padding: 10px 0;
     text-align: center;
 }
